Fix: fix z-index on several components

--- a/instagram-frontend/src/components/Header/components/NavigationMenu/navigationBar.scss
+++ b/instagram-frontend/src/components/Header/components/NavigationMenu/navigationBar.scss
@@ -3,7 +3,6 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  z-index: 998;
   &__wrapper {
     width: 100%;
     max-width: 200px;
@@ -47,9 +46,10 @@
       }
     }
     &.user-menu {
+      width: 24px;
+      height: 24px;
       background-size: cover !important;
       border-radius: 50%;
-      box-sizing: initial;
       &.active {
         border: 1px solid #000;
       }
@@ -64,11 +64,11 @@
     border-radius: 6px;
     box-shadow: -2px -6px 16px 2px rgba(0,0,0,0.2);
     user-select: none;
-    z-index: 998;
+    z-index: 996;
     & .backdrop {
       display: block;
       cursor: default;
-      z-index: 0;
+      z-index: 995;
     }
     &::before {
       content: "";
@@ -87,6 +87,7 @@
       background-repeat: no-repeat;
       background-position: 16px center;
       font-size: 14px;
+      z-index: 997;
       &::before {
         content: "";
         position: absolute;
