--- a/instagram-frontend/src/components/Header/components/SearchBar/SearchBar.scss
+++ b/instagram-frontend/src/components/Header/components/SearchBar/SearchBar.scss
@@ -1,10 +1,22 @@
 .header-search {
   position: relative;
   margin-left: 100px;
-  z-index: 997;
+  z-index: 994;
+  &__backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: -0%;
+    top: 0;
+    z-index: 993;
+    display: none;
+    &.show {
+      display: block;
+    }
+  }
   &__form {
     position: relative;
-    z-index: 997;
+    z-index: 994;
     &__clear {
       position: absolute;
       top: 7px;
@@ -34,7 +46,6 @@
         }
       }
       &::placeholder {
-        
         background: url('/icons/magnifier.png') no-repeat;
         background-position: 45px 1px;
 
@@ -48,7 +59,7 @@
     min-width: 225px;
     max-height: 350px;
     background: #fff;
-    z-index: 997;
+    z-index: 994;
     overflow-y: auto;
     border: 1px solid #dbdbdb;
     box-shadow: -2px -6px 16px 2px rgba(0,0,0,0.2);
