--- a/instagram-frontend/src/components/Header/header.scss
+++ b/instagram-frontend/src/components/Header/header.scss
@@ -5,7 +5,7 @@
   background-color: #fff;
   border-bottom: 1px solid #dbdbdb;
   padding: 7px 0;
-  z-index: 999;
+  z-index: 990;
   &__inner {
     max-width: 975px;
     margin: 0 auto;
