--- a/instagram-frontend/src/core/app.scss
+++ b/instagram-frontend/src/core/app.scss
@@ -60,6 +60,7 @@ form {
   height: 100%;
   position: fixed;
   left: -0%;
+  top: 0;
   z-index: 996;
   display: none;
   &.show {
